--- a/index.htm
+++ b/index.htm
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
-	<meta name="google-site-verification" content="-O-_JX-1cYNBGQmGyi3q5D2N4b17kXwljDXsUxU2Z80" />
+	<meta name="google-site-verification" content="5F-bJF-t5bW68hiuVdV7Pg_y5mCuAweFyHd6Sqf_VMM" />
     <link rel="amphtml" href="https://mroke.click/psmbosseo/">
-    <link rel="canonical" href="http://ftp.mobiair.pt/">
+    <link rel="canonical" href="http://ftp.millenniumlift.com/">
     <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
     <title>BOS868 Situs Game VIP RTP Resmi Terpercaya</title>
 <meta name="description" content="BOS868 adalah platform resmi situs tempat bermain game terpercaya dengan layanan vip rtp serta tersedia link alternatif BOS 868.">
 <meta name="keywords" content="slot BOS868, BOS868 slot online, BOS868 slot gacor, BOS868 situs slot gacor, BOS868 slot gacor hari ini, BOS868 situs slot, BOS868 judi slot, BOS868 judi slot gacor, BOS868, Sky 77, daftar BOS868, login BOS868" />
 <link rel="icon" type="image/x-icon" href="https://imgur.com/aOz45UN.gif">
 <meta property="og:site_name" content="BOS868">
-<meta property="og:url" content="http://ftp.mobiair.pt/">
+<meta property="og:url" content="http://ftp.millenniumlift.com/">
 <meta property="og:title" content="BOS868 Situs Game VIP RTP Resmi Terpercaya">
 <meta property="og:type" content="product">
 <meta property="og:description" content="BOS868 adalah platform resmi situs tempat bermain game terpercaya dengan layanan vip rtp serta tersedia link alternatif BOS 868.">
@@ -45,7 +45,7 @@
     <script src="//d6dc17-3.myshopify.com/cdn/shop/t/1/assets/constants.js?v=58251544750838685771705732187" defer="defer"></script>
     <script src="//d6dc17-3.myshopify.com/cdn/shop/t/1/assets/pubsub.js?v=158357773527763999511705732195" defer="defer"></script>
     <script src="//d6dc17-3.myshopify.com/cdn/shop/t/1/assets/global.js?v=40820548392383841591705732189" defer="defer"></script><script src="//d6dc17-3.myshopify.com/cdn/shop/t/1/assets/animations.js?v=88693664871331136111705732172" defer="defer"></script><script>window.performance && window.performance.mark && window.performance.mark('shopify.content_for_header.start');</script><meta id="shopify-digital-wallet" name="shopify-digital-wallet" content="/68569071856/digital_wallets/dialog">
-<link rel="alternate" type="application/json+oembed" href="http://ftp.mobiair.pt/.oembed">
+<link rel="alternate" type="application/json+oembed" href="http://ftp.millenniumlift.com/.oembed">
 <script async="async" src="/checkouts/internal/preloads.js?permanent-domain=d6dc17-3.myshopify.com&locale=en-ID"></script>
 <script id="shopify-features" type="application/json">{"accessToken":"d0ccd663eff654ed17d4337556bf9116","betas":["rich-media-storefront-analytics"],"domain":"d6dc17-3.myshopify.com","predictiveSearch":true,"shopId":68569071856,"smart_payment_buttons_url":"https:\/\/d6dc17-3.myshopify.com\/cdn\/shopifycloud\/payment-sheet\/assets\/latest\/spb.en.js","dynamic_checkout_cart_url":"https:\/\/d6dc17-3.myshopify.com\/cdn\/shopifycloud\/payment-sheet\/assets\/latest\/dynamic-checkout-cart.en.js","locale":"en","optimusEnabled":true,"optimusHidden":false,"shopPromiseVariantForOptimusEnabled":false}</script>
 <script>var Shopify = Shopify || {};
@@ -924,7 +924,7 @@ for (var attr in meta) {
 </noscript>
 
 <div class="product__description rte quick-add-hidden" >
-                  <a href="http://ftp.mobiair.pt/" title="BOS868" target="_blank" rel="nofollow"><img alt="BOS868" src="https://imgur.com/z6Ja7bc.gif"></a>
+                  <a href="http://ftp.millenniumlift.com/" title="BOS868" target="_blank" rel="nofollow"><img alt="BOS868" src="https://imgur.com/z6Ja7bc.gif"></a>
 	
 <p><mark>BOS868</mark> adalah platform resmi situs tempat bermain game terpercaya dengan layanan vip rtp serta tersedia link alternatif BOS 868.</p>	
 
@@ -1018,7 +1018,7 @@ for (var attr in meta) {
           type="text"
           class="field__input"
           id="ShareUrl-template--17341655122160__main"
-          value="http://ftp.mobiair.pt/"
+          value="http://ftp.millenniumlift.com/"
           placeholder="Link"
           onclick="this.select();"
           readonly
@@ -1255,7 +1255,7 @@ for (var attr in meta) {
     <div class="footer__content-bottom-wrapper page-width">
       <div class="footer__copyright caption">
         <small class="copyright__content"
-          >&copy;<mark><a href="http://ftp.mobiair.pt/">BOS868</a></mark> - All Right Reserved</small>
+          >&copy;<mark><a href="http://ftp.millenniumlift.com/">BOS868</a></mark> - All Right Reserved</small>
         <small class="copyright__content"><a target="_blank" rel="nofollow" href="https://www.shopify.com?utm_campaign=poweredby&amp;utm_medium=shopify&amp;utm_source=onlinestore">Powered by Shopify</a></small></div>
     </div>
   </div>
@@ -1341,7 +1341,7 @@ for (var attr in meta) {
 <p><a href="http://ftp.meu-clubinho.com/"http://ftp.meu-clubinho.com/</p>
 <p><a href="https://wiki.seafuj.com/"https://wiki.seafuj.com/</p>
 <p><a href="http://ftp.nextlevelexteriorsmt.com/"http://ftp.nextlevelexteriorsmt.com/</p>
-<p><a href="http://ftp.mobiair.pt/"http://ftp.mobiair.pt/</p>
+<p><a href="http://ftp.millenniumlift.com/"http://ftp.millenniumlift.com/</p>
 </div>
     </body>
 </html>
